Fix MoneyAmount alignment, Description box width

--- a/src/components/BankTransactionRow/bankTransactionRow.scss
+++ b/src/components/BankTransactionRow/bankTransactionRow.scss
@@ -10,3 +10,13 @@
   overflow: hidden;
   width: 100%;
 }
+
+.Layer__BankTransactionRow__Description {
+  width: 40%;
+}
+
+@container (max-width: 760px) {
+  .Layer__BankTransactionRow__Description {
+    width: 100%;
+  }
+}
